// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AmountOfChildrenField /> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV gZGAuo"
          id="amountOfChildrenField"
          name="name"
          placeholder="Liczba osób na utrzymaniu"
          type="text"
          value="test"
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        Podana ilość jest nieprawidłowa
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<AmountOfChildrenField /> matches snapshot 1`] = `
<input
  class="sc-fodVxV kubVCF"
  id="amountOfChildrenField"
  name="name"
  placeholder="Liczba osób na utrzymaniu"
  type="text"
  value=""
/>
`;

exports[`<AmountOfChildrenField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV gZGAuo"
          id="amountOfChildrenField"
          label="Test"
          name="name"
          placeholder="Liczba osób na utrzymaniu*"
          required=""
          type="text"
          value=""
        />
      </div>
      <span
        class="sc-hBEYos kIOtFs"
      >
        To pole jest wymagane
      </span>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      disabled=""
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;

exports[`<AmountOfChildrenField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-fubCfw clDFWv"
    id="testForm"
  >
    <div
      class="sc-iqHYGH jWqqni"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-iJuUWI cFUPqY"
      >
        <input
          class="sc-fodVxV kubVCF"
          id="amountOfChildrenField"
          label="Test"
          name="name"
          placeholder="Liczba osób na utrzymaniu"
          type="text"
          value=""
        />
      </div>
    </div>
    <button
      class="sc-iBPRYJ hcYpVh"
      type="submit"
    >
      Wyślij
    </button>
  </form>
</div>
`;
